--- a/python/파이썬 1. 데이터.md
+++ b/python/파이썬 1. 데이터.md
@@ -90,11 +90,40 @@
 ### 2. dictionary
 
 - 순서 없이 키-값 쌍으로 이뤄진 객체를 참조하는 자료형
+
 - key - 해시가능한 불변 자료형만 가능 (immutable)
   - string, integer, float, boolean, tuple, range
 
 - values - 어떤 값이든 상관없음
+
 - `{}` or `dict()`
+
+- `.keys()` : 키들을 dict_keys(['한국어', '영어'])로 뽑음
+
+- `.values()`  : 값들을 dict_values(['안녕', 'hello'])로 뽑음 key는 못 뽑음
+
+- `.items()`  : (key, value)로 추출 dict_items([('한국어', '안녕'), ('영어', 'hello')])
+
+- `.get(key)` : key 값의 value를 추출
+
+  - ```python
+    print(hi.get('한국어'))
+    print(type(hi.get('한국어')))
+    안녕
+    <class 'str'>
+    ```
+
+    
+
+- ```python
+  def my_url(**kwarg):
+      url = 'https://api.go.kr?'
+      for key, value in kwarg.items():
+          url += f'{key}={value}&'
+      return url
+  ```
+
+- 
 
 
 
