add baek solving

--- a/python/파이썬 3. 함수.md
+++ b/python/파이썬 3. 함수.md
@@ -70,12 +70,17 @@
 
     - **기본 인자는 함수 선언 할 때**
 
+    |                        | func                    |                         |
+    | ---------------------- | ----------------------- | ----------------------- |
+    | 함수 선언 (def 키워드) | `a = '1'` : 기본인자    | `*a`  : 가변인자 리스트 |
+    | 함수 호출              | `a = '1'` : 키워드 인자 | `*a` : unpacking        |
+  
   - 함수의 범위(Scope)
-
+  
     - 함수는 코드 내부에 local scope를 생성, 그 외의 공간은 global scope
-
+  
     - global scope : 코드 어디에서든 참조할 수 있는 공간
-
+  
     - local scope : 함수가 만든 scope, 함수 내부에서만 참조 가능
   
     - variable
@@ -91,11 +96,11 @@
       3. Global scope : 함수 밖의 변수, Import 모듈
       4. Built-in scope : 파이썬 안에 내장되어 있는 함수 또는 속성
       ```
-
+  
     - `global` : 나열된 식별자가 global 변수임을 나타냄
-
+  
     - `nonlocal` : global을 제외하고 가장 가까운(둘러 싸고 있는) enclosed scope의 변수를 연결 
-
+  
   - 함수의 문서화 , Docstring(Document String)
   
     - 함수나 클래스의 설명 
@@ -160,3 +165,67 @@
 ## 1급 개체
 
 3가지 만족
+
+1. 변수나 데이타에 할당 할 수 있어야 한다.
+2. 객체의 인자로 넘길 수 있어야 한다.
+3. 객체의 리턴값으로 리턴 할수 있어야 한다.
+
+
+
+|                        | func                    |                         |
+| ---------------------- | ----------------------- | ----------------------- |
+| 함수 선언 (def 키워드) | `a = '1'` : 기본인자    | `*a`  : 가변인자 리스트 |
+| 함수 호출              | `a = '1'` : 키워드 인자 | `*a` : unpacking        |
+
+---
+
+```python
+lst = [
+    [1, 2, 3],
+    [4, 5, 6],
+    [7, 8, 9],
+]
+print('----- 기본형태 -----')
+for i in lst:
+    print(i)
+    
+print('----- 전치행렬 -----')
+lst2 = list(map(list,zip(*lst)))
+
+for i in lst2:
+    print(i)
+
+print('----- 반시계 90도 -----')
+
+lst3 = list(map(list,zip(*lst)))[::-1]
+
+for i in lst3:
+    print(i)
+    
+print('----- 시계 90도 -----')
+
+lst4 = list(map(list,zip(*lst[::-1])))
+
+for i in lst4:
+    print(i)
+```
+
+```python
+----- 기본형태 -----
+[1, 2, 3]
+[4, 5, 6]
+[7, 8, 9]
+----- 전치행렬 -----
+[1, 4, 7]
+[2, 5, 8]
+[3, 6, 9]
+----- 반시계 90도 -----
+[3, 6, 9]
+[2, 5, 8]
+[1, 4, 7]
+----- 시계 90도 -----
+[7, 4, 1]
+[8, 5, 2]
+[9, 6, 3]
+```
+
