--- a/python/파이썬 4. 모듈.md
+++ b/python/파이썬 4. 모듈.md
@@ -5,3 +5,10 @@
   - 특정 기능과 관련된 여러 모듈의 집합
   - 패키지 안에는 또 다른 서브 패키지를 포함
 - 파이썬 표준 라이브러리
+
+
+
+- $ pip list : 내 책상 위에 있는 목록
+
+- $ pip freeze : 구매목록 -> requirements.txt
+- $ pip install -r requirements.txt -> 구매
