--- a/python/파이썬 5. 데이터 구조 및 활용.md
+++ b/python/파이썬 5. 데이터 구조 및 활용.md
@@ -104,7 +104,11 @@
 
 - 얕은 복사
 
-  - 리스트에 [:] 같은 객체를 참조하므로 주의
+  1. `b = a[:]` 리스트에 [:] 같은 객체를 참조하므로 주의
+
+  2. `b = list(a)`
+
+  3. `.copy()`
 
 - 깊은 복사
 
