--- a/cs 정리/4. CPU 스케줄링1.md
+++ b/cs 정리/4. CPU 스케줄링1.md
@@ -25,6 +25,14 @@
 
 ![image-20220202183012451](4. CPU 스케줄링1.assets/image-20220202183012451.png)
 
+1) CPU를 잡고 있는 프로세스가 I/O 작업처럼 시간이 오래 걸리는 작업을 할 때 자진해서 CPU를 내어놓고 blocked
+
+2) CPU를 잡고 있는 프로세스의 사용 시간이 다 되어 ready상태가 되어 다시 CPU를 기다림
+
+3) 요청했던 I/O작업이 끝나면 I/O Device controller가 CPU에 인터럽트를 걸어서 blocked 된 프로세스를 ready 상태로. 우선순위 기반 스케쥴링의 경우, CPU를 빼앗기는 프로세스가 아직 사용 시간이 남아있더라도 I/O 처리가 끝난 프로세스의 우선순위가 더 높다면 그 프로세스에게 CPU가 넘어감
+
+4) 프로세스가 종료됐을 때
+
 - 둘 다 운영체제의 일부
 
 ![image-20220202183549723](4. CPU 스케줄링1.assets/image-20220202183549723.png)
