--- a/cs 정리/1. 운영체제의 기능.md
+++ b/cs 정리/1. 운영체제의 기능.md
@@ -16,7 +16,7 @@
 
 # 메모리 관리
 
-- 미래르 모르는 상황에서 또 사용될 메모리를 유지하고 사용되지 않을 것 같은 페이지를 갈아치우기
+- 미래를 모르는 상황에서 또 사용될 메모리를 유지하고 사용되지 않을 것 같은 페이지를 갈아치우기
 
 - 디스크(파일 시스템) : 비휘발성
 - 디스크(스왑영역) : 메모리 연장 공간
