--- a/cs 정리/3. 프로세스 관리2.md
+++ b/cs 정리/3. 프로세스 관리2.md
@@ -36,8 +36,9 @@ Q) 프로세스 상태도 그려봐라
   - 경제성 (프로세스 하나를 만들기 vs 스레드 하나 만들기 30배)
   - CPU가 여러개인 상황에서 여러 스레드로 병렬성
 - 구현 방법
-  - 커널 스레드 : CPU가 알아서 스레드로 인식, 운영체제가 지원해주는 스레드 사용
+  - 커널 스레드 : CPU가 알아서 스레드로 인식, 운영체제가 지원해주는 스레드 사용, 다른 쓰레드로 넘어가는 것을 커널이 프로ㅔ스 스케줄링처럼 관리
   - 유저 스레드 : 사용자 스레드, 사용자만 알아서 운영체제한테 비동기식 입출력을 요청해서 다른 스레드 실행
+  - real-time threads
 
 ## 5. 프로세스의 관리
 
@@ -48,6 +49,29 @@ Q) 프로세스 상태도 그려봐라
 ![image-20220201224416704](3. 프로세스 관리2.assets/image-20220201224416704.png)
 
 ![image-20220201224732623](3. 프로세스 관리2.assets/image-20220201224732623.png)
+
+- 자원 공유
+
+  - 배정된 자원 안에서 서로 싸우는게 대부분
+  - 일부분의 자원을 공유한다
+
+- 주소 공간 (Address space)
+
+  - 자식은 부모의 공간을 복사함 (binary and OS data)
+
+  - 자식은 그 공간에 새로운 프로그램을 올림
+
+  - **fork()**
+
+     시스템 콜이 새로운 프로세스를 생성
+
+    - 부모를 그대로 복사
+
+    - 주소 공간 할당
+
+    - fork() 다음에 이어지는 ***exec()*** 시스템 콜을 통해 새로운 프로그램을 메모리에 올림
+
+      > fork 와 exec 의 차이점?
 
 
 
@@ -63,11 +87,15 @@ Q) 프로세스 상태도 그려봐라
 
 ![image-20220201225428927](3. 프로세스 관리2.assets/image-20220201225428927.png)
 
+![image-20220205171859380](3. 프로세스 관리2.assets/image-20220205171859380.png)
 
 
 
+## 프로세스 간 협력
 
+![image-20220205171956369](3. 프로세스 관리2.assets/image-20220205171956369.png)
 
+![image-20220205172112532](3. 프로세스 관리2.assets/image-20220205172112532.png)
 
-
+![image-20220205172139370](3. 프로세스 관리2.assets/image-20220205172139370.png)
 
