--- a/cs 정리/1_운영체제의 기능.md
+++ b/cs 정리/1_운영체제의 기능.md
@@ -49,7 +49,7 @@
 
 # 저장장치 구조와 캐싱
 
-![저장장치 구조와 캐싱1](1. 운영체제의 기능.assets/저장장치 구조와 캐싱1.jpg)
+![저장장치 구조와 캐싱1](1_운영체제의 기능.assets/저장장치 구조와 캐싱1.jpg)
 
 ## 플래시 메모리
 
