--- a/cs 정리/1_운영체제의 기능.md
+++ b/cs 정리/1_운영체제의 기능.md
@@ -51,7 +51,7 @@
 
 
 
-![저장장치 구조와 캐싱1](./1_운영체제의 기능.assets/저장장치 구조와 캐싱1.jpg?raw=true)
+![저장장치 구조와 캐싱1](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/1_%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C%EC%9D%98%20%EA%B8%B0%EB%8A%A5.assets/%EC%A0%80%EC%9E%A5%EC%9E%A5%EC%B9%98%20%EA%B5%AC%EC%A1%B0%EC%99%80%20%EC%BA%90%EC%8B%B11.jpg)
 
 ## 플래시 메모리
 
