--- a/cs 정리/9_가상_메모리.md
+++ b/cs 정리/9_가상_메모리.md
@@ -16,17 +16,17 @@
   - 처음에는 모든 page entry가 invalid로 초기화
   - address tanslation 시에 invalid bit이 set되어 있으면 -> **"page fault"**(요청한 페이지가 메모리에 없는 경우)
 
-![image-20220222225708842](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222225708842.png)
+![image-20220222225708842](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222225708842.png)
 
 - 6, 7은 사용되지 않는 페이지, 나머지 invalid는 메모리에 없고 디스크의 swap area에 있다는 뜻
 
 ### Page Fault
 
-![image-20220222230040393](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222230040393.png)
+![image-20220222230040393](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222230040393.png)
 
 - 요청한 페이지가 메모리에 없는 경우
 
-![image-20220222230330064](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222230330064.png)
+![image-20220222230330064](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222230330064.png)
 
 1. 요청, invalid 확인 
 2. trap을 걸어서 os로 
@@ -35,7 +35,7 @@
 5. 해당 frame번호를 table에 넣고 valid로
 6. 프로세스가 다시 CPU를 얻어서 작업
 
-![image-20220222230925761](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222230925761.png)
+![image-20220222230925761](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222230925761.png)
 
 - p는 0에 가까운 경우가 대부분
 
@@ -52,13 +52,13 @@
   - reference string의 예
     - 1, 2, 3, 4, 1, 2, 5, 1, 2, 3, 4, 5
 
-![image-20220222231757823](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222231757823.png)
+![image-20220222231757823](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222231757823.png)
 
 - write가 발생했다면 backing stage의 값을 변경해주고 없에고 그렇지 않으면 그냥 제거
 
 ##### Optimal Offline Algorithm
 
-![image-20220222231850628](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222231850628.png)
+![image-20220222231850628](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222231850628.png)
 
 - page fault가 가장 적은 알고리즘(optimal)
 - referance string을 미리 알고 있다고 가정하에 알고리즘 운영
@@ -67,23 +67,23 @@
 
 ##### FIFO(First In First Out) Algorithm
 
-![image-20220222232317247](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222232317247.png)
+![image-20220222232317247](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222232317247.png)
 
 - FIFO Anomaly(frame을 늘였는데 성능이 나빠지는 기이한 현상)
 
 ##### LRU(Least Recently Used) Algorithm
 
-![image-20220222232544337](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222232544337.png)
+![image-20220222232544337](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222232544337.png)
 
 ##### LFU(Least Frequently Used) Algorithm
 
-![image-20220222232802104](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222232802104.png)
+![image-20220222232802104](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222232802104.png)
 
-![image-20220222232945265](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222232945265.png)
+![image-20220222232945265](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222232945265.png)
 
 
 
-![image-20220222233457680](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222233457680.png)
+![image-20220222233457680](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222233457680.png)
 
 - LRU는 가장 위(가장 오래전에 사용한 페이지)를 제거
 - 다시 사용되면 가장 아래로 옮긴다
@@ -95,20 +95,20 @@
 
 > 가상 메모리 관리를 위한 캐싱기법과 클락 알고리즘에 대해 알아본다.
 
-![image-20220222233559131](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222233559131.png)
+![image-20220222233559131](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220222233559131.png)
 
 - paging과 buffer caching 둘 다 빠른 곳이 메모리, 느린 곳은 paging은 디스크, buffer caching은 파일 시스템
 - Web caching은 웹서버에서 데이터를 받아올 때 같은 웹페이지의 내용을 받을 때 더 빨리 처리하려고 저장놓아서 속도 완화
 - order of n : 캐싱을 교체하는데 n 개 전부 다 한번 씩 살펴봐야 한다
 - Paging system에서는 위의 알고리즘들을 다 사용하지 못한다?
 
-![image-20220224203912096](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224203912096.png)
+![image-20220224203912096](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224203912096.png)
 
 - page fault가 일어나 운영체제가 CPU를 가져와 디스크에서 메모리에 페이지를 올려놓으면 참조량이나 시간을 갱신할 수 있는데 그렇지 않으면 OS의 개입 없이 프로세스가 tage table에 있는 내용으로 바로 메모리에서 데이터를 가져와 처리해버려서 참조 표시가 불가능하다
 
 ##### Clock Algorithm
 
-![image-20220224204254984](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224204254984.png)
+![image-20220224204254984](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224204254984.png)
 
 - paging system이 실제로 사용하는 방법
 - 하드웨어가 reference bit을 1로 바꿈
@@ -116,7 +116,7 @@
 - reference bit(= access bit)
 - read만 발생하면 reference bit만 1, write을 하면 modified(dirty) bit도 1 ->교체할 때 디스크에 쓰고 제거해야 함
 
-![image-20220224204524048](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224204524048.png)
+![image-20220224204524048](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224204524048.png)
 
 
 
@@ -153,11 +153,11 @@
 
 ## Thrashing
 
-![image-20220224211255962](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224211255962.png)
+![image-20220224211255962](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224211255962.png)
 
 - 메모리에 너무 많은 프로그램이 동시에 올라가서 프로그램을 실행하는데 필요한 최소한의 메모리도 없는 상황, page fault를 다루는데 바쁜 상황
 
-![image-20220224211543036](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224211543036.png)
+![image-20220224211543036](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224211543036.png)
 
 
 
@@ -177,7 +177,7 @@
 
 #### Working-Set Algorithm
 
-![image-20220224212257281](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224212257281.png)
+![image-20220224212257281](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224212257281.png)
 
 - delta만큼의 window 안의 페이지들을 working set으로
 - 5개 못 주겠다 그러면 다 반납하고 swap out
@@ -188,7 +188,7 @@
 
 #### PFF(Page-Fault Frequency) Scheme
 
-![image-20220224212701082](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224212701082.png)
+![image-20220224212701082](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224212701082.png)
 
 - 각 프로세스의 page fault 비율을 보면서 frame 할당
 - page fault 비율을 upper와 lower bound 사이에 유지하는 것이 목적
@@ -196,7 +196,7 @@
 
 
 
-![image-20220224213006568](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9.%20%EA%B0%80%EC%83%81%20%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224213006568.png)
+![image-20220224213006568](https://github.com/ljhyung/TIL/blob/master/cs%20%EC%A0%95%EB%A6%AC/9_%EA%B0%80%EC%83%81_%EB%A9%94%EB%AA%A8%EB%A6%AC.assets/image-20220224213006568.png)
 
 - 인접한 위치가 사용될 가능성이 높은데 작으면 Disk를 매번 읽어야 해서 transfer 효율 감소
 - Locality 측면에서 좋지 않음
