add spring boot TIL

--- a/spring/스프링 부트 프로젝트 TIL/0801.md
+++ b/spring/스프링 부트 프로젝트 TIL/0801.md
@@ -6,10 +6,48 @@ fcm firebase
 jetpack paging
 stomp 로 웹소켓 뚫어서 대기 인원 고객에게 보여주기?
 
-
-
 ### 로그인 과정에서 주의할 점
 
 intercepter 로 access token오면 로그인가능한가 체크
 로그인가능하면 유저정보를 공통객체에 담는거
 공통객체로 api에 다 가지고 쓴다
+
+팀장미팅
+
+웹훅
+
+서버 백 배포해서 api조정 중
+
+젠킨스 자동 배포는 웹훅을 이용해서 진행 중
+
+일정 맞게 진행 중
+
+서버 접근 권한을 마음대로 낮추지 말자
+
+해킹 당할 수 있다
+
+최종 발표는 오프라인일 것인데 수요일말 할지 금요일에 할지 
+
+금요일 안 되면 수요일에 진행예정
+
+하루이틀 미뤄진거라고 생각하는데 3,4일 미뤄진 것일거다
+
+더 효율적인 방식으로 팀을 이끌어가기 위해 방식을 바꿔보고 안 되면 컨설턴트님한테 상담
+
+쉬는 사람이 없도록 간트차트 같은걸 했는데 쉬는 사람이 하나라도 있으면 채찍질해라
+
+백엔드 분들이 보통 먼저 끝내놓고 논다
+
+남은 시간을 프론트랑 개발하는데 필요한거 주워주고 배포해주고
+
+처음에 api 설계할 때 같이 했으니깐 후반부에는 백엔드가 프론트의 진척에 도움을 줘야한다
+
+팀장이 회의를 통해 조율해야한다
+
+왜 수요일에 발표 얘기하냐
+
+마지막 주는 개발이 아니라 1명정도 배포 같은거 빼고 나머지는 다 발표준비 할 것이다
+
+그 기간 이후로는 컨설님이 포폴이나 이력서 같은거 봐줄 예정
+
+![](C:\Users\multicampus\AppData\Roaming\marktext\images\2022-08-02-14-20-35-image.png)
