--- a/spring/스프링 부트 프로젝트 TIL/0808.md
+++ b/spring/스프링 부트 프로젝트 TIL/0808.md
@@ -4,10 +4,6 @@ addr_del_yn이 null로 설정되어 있어서 검색이 안 된다!!!!
 
 -> @DynamicInsert가 없어서 default가 적용이 안 되었다
 
-
-
-
-
 브랜드 이름으로 상담사 검색 x
 
 오픈비두 api로 세션 만들어서 정보 전달, x? 
@@ -15,8 +11,6 @@ addr_del_yn이 null로 설정되어 있어서 검색이 안 된다!!!!
 - 전달할 정보는 없고 상담 생성 시 세션 생성
 
 - 상담 상태 update 시 세션 종료
-
-
 
 **fcm,** 
 
@@ -28,36 +22,40 @@ addr_del_yn이 null로 설정되어 있어서 검색이 안 된다!!!!
 -v /etc/localtime:/etc/localtime:ro -e TZ=Asia/Seoul
 ```
 
-
-
-
-
-consulting state를 생성, 
+consulting state를 생성,
 
 fcm으로 고객에게 알림(후순위)
 
 고객 들어온거 나간거 대기 방에서 고객이 들어올 때 state를 s로(waiting customer에서 delete), 나가면 e.
 
-
-
 프론트에서
 
 상담사가 수락하면 세션 만들고 입장
 
-consulting 생성 state는 초기상태(w)
+consulting 생성 state는 초기상태(waiting)
 
-이 상태가 30초 단위로 확인하고 계속 w면 2,3분 지나도 안 들어오면 state e(delete -> fcm알림 시간 초과 알림)로 하고 자동 종료되도록
+~~이 상태가 30초 단위로 확인하고 계속 w면 2,3분 지나도 안 들어오면 state e(delete -> fcm알림 시간 초과 알림)로 하고 자동 종료되도록~~
 
+~~state 밑에 counting을 한개 만들어서 state 값을 조회할 때마다 w면 +1을 해서 적절한 값에 다다르면 state를 e로 바꾸도록?~~
 
+~~대기 고객 삭제 -> 상담 생성으로 이어지게?~~
 
-customer의 토큰값만 바꾸는 api 추가
+상담 생성 -> ~~상태 조회는 프론트에서 계속 조회용 api를 날려준다?~~ 일정 시간 지났다고 판단되면 프론트랑 모바일에 상담이 종료됐다는 신호를 준다? (**상담 종료 버튼을 일정 시간이 지나고 나서 활성화되도록 한다**? 상담사가 버튼이 활성화 됐는데도 고객이 들어오지 않으면 나간다~~? -> 고객이 들어왔던 안 들어왔던 state는 delete로~~
 
-토큰값으로 메세지 보내는 ㄴ
+아니면 waiting인 상태에서 delete가 되면 noshow, start 상태에서 종료가 되면 end로?
 
+고객 입장 시 state값 바꿔줄 api 만들기)
 
+~~customer의 토큰값만 바꾸는 api 추가 x~~
 
+s3, oauth2, fcm,  
 
+resttempalte으로 외부 api 호출하기
+
+https://velog.io/@dogyun-k/RestTemplate%EB%A1%9C-%EB%8B%A4%EB%A5%B8-%EC%84%9C%EB%B2%84%EC%99%80-%ED%86%B5%EC%8B%A0%ED%95%98%EA%B8%B0
 
 s3 255
 
+json을 객체로 만들어 주기
 
+[JSON to POJO Object Online Converter - Json2CSharp Toolkit](https://json2csharp.com/code-converters/json-to-pojo)
